--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/amp_sbackend
+spring.datasource.url=jdbc:mysql://localhost:3306/amp_backend
 spring.datasource.username=root
 spring.datasource.password=root
